fixed footer link color contrast

--- a/_includes/style.css
+++ b/_includes/style.css
@@ -227,6 +227,11 @@ em {
     padding: 0 .25em;
 }
 
+.ft a {
+  color: #fff;
+  text-decoration: underline;
+}
+
 @media screen and (max-device-width: 480px) {
     #doc {
         margin: auto;
